--- a/index.html
+++ b/index.html
@@ -343,12 +343,18 @@
             box-shadow: 0 20px 60px rgba(10, 25, 47, 0.15);
         }
 
-        .about-image-wrapper::before {
-            content: 'JL';
-            font-size: 8rem;
-            font-weight: 800;
-            color: rgba(255, 255, 255, 0.3);
-        }
+        .profile-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+    transition: transform 0.4s ease;
+}
+
+.about-image-wrapper:hover .profile-img {
+    transform: scale(1.05);
+}
+
 
         .about-content h3 {
             font-size: 2rem;
@@ -930,7 +936,10 @@
         </div>
         <div class="about-grid">
             <div class="about-image scroll-reveal">
-                <div class="about-image-wrapper"></div>
+               <div class="about-image-wrapper">
+    <img src="assets/Leo.jpg" alt="Joe Leo van Niekerk" class="profile-img">
+</div>
+
             </div>
             <div class="about-content scroll-reveal">
                 <h3>Driven by Innovation & Impact</h3>
@@ -940,8 +949,8 @@
                     comprehensive knowledge in programming, cloud development, security, and information systems.
                 </p>
                 <p>
-                    Beyond academics, I'm the Founder of SkillCycle, a platform dedicated to transforming how people 
-                    learn and develop new skills. I also work as a freelance web developer, helping businesses 
+                    Beyond academics, I'm the Founder of SkillCycle, a platform dedicated to transforming how public schools 
+                    learn and develop digital literacy. I also work as a freelance web developer, helping businesses 
                     establish their digital presence with modern, responsive websites.
                 </p>
                 <div class="stats">
@@ -1047,7 +1056,9 @@
                 <h3 class="skill-title">Programming</h3>
                 <ul class="skill-list">
                     <li>Java & Object-Oriented Design</li>
-                    <li>Python Development</li>
+                    <li>C# a modern, object-oriented programming language
+
+                    </li>
                     <li>Web Technologies (HTML/CSS/JS)</li>
                     <li>Database Management (SQL)</li>
                 </ul>
@@ -1110,9 +1121,8 @@
                     <span class="exp-date">Present</span>
                 </div>
                 <p class="exp-description">
-                    Founded SkillCycle.co.za, a platform focused on skill development and learning. 
-                    Leading product development, strategy, and business operations to create impactful 
-                    educational technology solutions.
+                    Founded SkillCycle, a business focused on turning E-waste into opportunity. 
+                    By turning pcs that would've landed in landfills into digital classrooms , providing quality education to schools who couldn't afford it previously.
                 </p>
                 <a href="https://skillcycle.co.za" target="_blank" class="exp-link">
                     Visit SkillCycle <i class="fas fa-arrow-right"></i>
@@ -1171,17 +1181,17 @@
                 <a href="https://skillcycle.co.za" target="_blank" class="contact-link" title="SkillCycle">
                     <i class="fas fa-globe"></i>
                 </a>
-                <a href="#" class="contact-link" title="LinkedIn">
+                <a href="www.linkedin.com/in/joe-leo-van-niekerk-654653302" class="contact-link" title="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="#" class="contact-link" title="GitHub">
+                <a href="https://github.com/VanNiekerkJoe" class="contact-link" title="GitHub">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="contact-link" title="Twitter">
+                <a href="" class="contact-link" title="Twitter">
                     <i class="fab fa-twitter"></i>
                 </a>
             </div>
-            <a href="mailto:hello@skillcycle.co.za" class="email-link">
+            <a href="mailto:leo.vniekerk05@gmail.com" class="email-link">
                 <i class="fas fa-envelope"></i>
                 Say Hello
             </a>
